--- a/work.html
+++ b/work.html
@@ -6,20 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HiteWorks | Our Work</title>
 
-    <!-- Bootstrap first -->
+    <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="…"
         crossorigin="anonymous">
 
-    <!-- Global styles next (incl. your navbar) -->
+    <!--Global styles-->
     <link rel="stylesheet" href="styles.css">
 
-    <!-- Page-specific overrides last -->
+    <!--Page-specific-->
     <link rel="stylesheet" href="work-styles.css">
 
-    <!-- Fonts last -->
+    <!--Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
-</head>
 
+    <!--Favicon-->
+    <link rel="icon" type="image/png" href="images/temp-favicon.png">
+</head>
 
 <body>
     <header>
